# stylize-mcp-server

./: .coveragerc  .env.example  .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEMO.md  Dockerfile  Dockerfile.e2e  FREEMIUM_TRIAL_SYSTEM.md  LICENSE  MANUAL_SETUP_CHECKLIST.md  MCP_IMPLEMENTATION_PLAN.md  QUICK_START.md  README.md  SaaS_CUSTOMER_FLOW.md  TODO.md  cloudbuild.yaml  docker-compose.e2e.yml  fake-credentials.json  firestore.rules  manage_api_keys.py  pyproject.toml  pytest.ini  requirements-e2e.txt  requirements.txt  test_deployed_app.py  test_deployed_app_simple.sh  test_firestore.py  verify_functionality.py  website-design.md
.github/workflows/: ci.yml  e2e-tests.yml
app/: abuse_monitoring_service.py  auth_service.py  behavior_analysis_service.py  captcha_service.py  config.py  context_analysis_service.py  fingerprint_service.py  gcs_service.py  main.py  mcp_server.py  models.py  openai_service.py  protection_middleware.py  rate_limiting_service.py  risk_scoring_service.py  styles.json  styles_service.py  trial_service.py  user_service.py  vpn_detection_service.py
app/static/js/: fingerprint.js
app/templates/: dashboard.html  demo.html  purchase_success.html  trial_upgrade.html
docs/: E2E_TESTING_IMPLEMENTATION_PLAN.md  README.md  SECURITY_CONFIGURATION.md  TESTING_GUIDE.md  api_contract_mvp.md  cicd_setup.md  cost_management.md  implementation-plan-detailed.md  implementation-plan.md  implementation-task-list.md  infra_costs.md  manual_setup_steps.md  market-research.md  vision.md
docs/architecture/: security-design.md  system-overview.md
docs/blog_posts/: may-14-2025.md  may-15-2025.md  may-17-2025.md
docs/deployment/: infrastructure-setup.md  security-configuration.md
docs/developer-guide/: api-reference.md  mcp-integration.md
docs/internal/: TODO.md
docs/internal/blog_posts/: may-14-2025.md
docs/internal/business-docs/: vision.md
docs/internal/implementation-plans/: ABUSE_PREVENTION_IMPLEMENTATION_SUMMARY.md  MCP_INTEGRATION_GUIDE.md  TRIAL_ABUSE_PREVENTION_PLAN.md  implementation-plan.md  implementation-task-list.md
docs/user-guide/: getting-started.md
infra/: apis_secrets.tf  iam.tf  main.tf  network.tf  outputs.tf  services.tf  storage.tf  terraform.tfvars.example  variables.tf  versions.tf
postman/: Stylize_MCP_Server_tests.postman_collection.json
scripts/: run-e2e-tests.sh
tests/: conftest.py  test_abuse_prevention.py  test_context_analysis_service.py  test_gcs_service.py  test_main.py  test_mcp_server.py  test_models.py  test_openai_service.py  test_openai_service.py.bak  test_openai_service_new.py  test_openai_simple.py  test_styles_service.py  test_trial_service.py  test_user_service.py
tests/e2e/: README.md  config.py  conftest.py  test_credit_system.py  test_cross_interface_integration.py  test_error_scenarios.py  test_infrastructure_check.py  test_mcp_ai_integration.py  test_performance.py  test_security_features.py  test_trial_user_journey.py
tests/e2e/pages/: __init__.py  base_page.py  dashboard_page.py  demo_page.py  trial_upgrade_page.py
tests/e2e/utils/: __init__.py  api_client.py  mcp_client.py  test_data_manager.py
~/.config/claude/: claude_desktop_config.json
